force-app/main/default/objects/Vendor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this product compete with something Richey May offers? If yes, check this box.</description>
    <inlineHelpText>Does this product compete with something Richey May offers? If yes, check this box.</inlineHelpText>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>