force-app/main/default/objects/Vendor__c/fields/Vendor_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Maker_Name__c</fullName>
    <description>This is the company that owns or makes the product. I.e. Optimal Blue is owned by Black Knight, so they would be the maker.</description>
    <inlineHelpText>This is the company that owns or makes the product. I.e. Optimal Blue is owned by Black Knight, so they would be the maker.</inlineHelpText>
    <label>Vendor Maker Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>