force-app/main/default/objects/Vendor__c/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <description>Select all options that apply for what this Vendor/Product does.</description>
    <inlineHelpText>Select all options that apply for what this Vendor/Product does.</inlineHelpText>
    <label>Vendor Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Type</valueSetName>
    </valueSet>
</CustomField>