force-app/main/default/objects/Vendor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Maker_Name__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>